--- a/index.html
+++ b/index.html
@@ -18,20 +18,16 @@
           inventore numquam dignissimos! Nemo, laborum.
         </p>
         <div class="btns">
-          <a class="btn">All</a>
-          <a class="btn">War</a>
-          <a class="btn">Liberation</a>
-          <a class="btn">Pact</a>
+          <!-- <a class="btn" data-category="All">All</a>
+          <a class="btn" data-category="War">War</a>
+          <a class="btn" data-category="Liberation">Liberation</a>
+          <a class="btn" data-category="Pact">Pact</a> -->
         </div>
       </div>
       <div class="grid-gallery">
-        <div class="frame">
-          <img
-            src="https://images.unsplash.com/photo-1682687219800-bba120d709c5?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="img"
-            class="image"
-          />
-        </div>
+        <!-- <div class="frame">
+          <img src="" alt="img" class="image" />
+        </div> -->
       </div>
     </main>
     <script src="script.js"></script>
